# Commandlessapp

./: .dockerignore  .gitignore  DEPLOYMENT_REPORT.md  Dockerfile  FINAL_SHIPPING_ASSESSMENT.md  FORCE_DEPLOY.md  FORCE_VERCEL_DEPLOY.md  PRODUCTION_DEPLOYMENT.md  README-BOT-RUNNER.md  README.md  RELAY-SETUP.md  SECURITY.md  TESTING_REPORT.md  UNIVERSAL_SHIPPING_REPORT.md  add-bot-id-to-api-keys.sql  api-server.js  check-database-state.js  cleanup-sample-data.sql  complete-api-keys-setup.sql  create-test-user.js  debug-db-check.sql  debug-wassup.js  deploy-relay.sh  final-shipping-report.md  find_all_policies.sql  fix-bot-id-nullable.sql  fix_database_schema.sql  fix_database_schema_final.sql  fix_database_schema_v2.sql  fix_database_schema_v3.sql  index.html  migrate-database.js  nixpacks.toml  package-lock.json  package.backend.json  package.json  package.relay.json  railway.json  railway.relay.toml  railway.toml  (+40 more)
Commandless landing page/: tailwind.config.ts
Commandless landing page 2/: README.md  index.html
api/: activities.ts  activity.ts  bot-connections.ts  bots.ts  commands.ts  debug-mapping.ts  debug.ts  discord-debug.ts  (+19 more)
sdk/relay-python/: README.md  pyproject.toml
sdk/relay-python/examples/: discord_quickstart.py
sdk/relay-python/scripts/: release.sh
sdk/relay-python/src/commandless_relay/: __init__.py  client.py  config_cache.py  discord_adapter.py  discord_runner.py
sdk/relay-python/src/commandless_relay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk/relay-python/tests/: test_client.py  test_config_cache.py
(+149 files in other folders)
